--- a/index.html
+++ b/index.html
@@ -422,12 +422,10 @@
                         placeholder="Введите текст"></textarea>
                         </div>
                     <div class="checkbox">
-                    <label class="modal-license" for="checkbox">Соглашаюсь с рассылкой и принимаю<a href="" class="checkbox-license"> Условия договора</a>
-                   <input type="checkbox"name="lisens"id="checkbox" class="checkbox">
-                <svg class="checkbox-svg" width="11" height="8">
-                    <use href="./images/symbol-defs.svg#icon-check"></use>
-                </svg>
-                   </label>
+                    <label class="modal-license" for="checkbox">Соглашаюсь с рассылкой и принимаю
+                        <a href="" class="checkbox-license link"> Условия договора</a></label>
+                   <input type="checkbox"name="lisens"id="checkbox" class="checkbox"/>
+                   <span class="icon-check"></span> 
                 </div>
                     <button type="submit" class="button-license">Отправить</button>
      </form> 
