--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <input type="email" class="modal-input" name="user-email" 
                     placeholder="Введите почту"
                      required 
-                     id="uaer-email"/>
+                     id="user-email"/>
                     </div>
                     <div class="modal-field">
                     <label class="modal-label" for="user-text">Коментарий</label>
