--- a/index.html
+++ b/index.html
@@ -377,7 +377,11 @@
                     </a>
                 </li>
                </ul>
-            
+                <p class="footer-form">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+            <div class="footer-field">
+                <label for="add" class="modal-label">Телефон</label>
+                <input type="" class="footer-input" name="add" id="add" placeholder="E-mail" required/>
+            </div>
  </footer>
  <div class="backdrop is-hidden" data-modal>
      <div class="modal">
@@ -405,8 +409,7 @@
             <label  for="user-tel" class="modal-label">Телефон</label>
             <input type="tel" class="modal-input" name="user-tel" 
                  id="user-tel" placeholder="Введите почту"
-                     required 
-                     id="user-tel" />
+                     required/>
             
                 </div>
                 <div class="modal-field">
