--- a/index.html
+++ b/index.html
@@ -377,9 +377,22 @@
                     </a>
                 </li>
                </ul>
-           
+        </div>
             <div class="footer-field">
             <p class="footer-form">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+            <form class="add-form">
+            <label class="footer-label" for="add-email"></label>
+            <input type="email" class="footer-input" 
+            name="add-email" 
+            placeholder="E-mail"
+             required 
+            id="add-email"/>
+            <button type="button" class="add-btn">Подписаться
+                <svg class="add-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                </svg>
+            </button>
+            </form>
             </div>
            
  </footer>
