--- a/index.html
+++ b/index.html
@@ -410,7 +410,6 @@
             <input type="text"
              class="modal-input"
               name="user-name" 
-              placeholder="Введите имя" 
               required 
               minlength="2"
               id="user-name">
@@ -421,14 +420,14 @@
         <div class="modal-field">
             <label  for="user-tel" class="modal-label">Телефон</label>
             <input type="tel" class="modal-input" name="user-tel" 
-                 id="user-tel" placeholder="Введите почту"
+                 id="user-tel" 
                      required/>
             
                 </div>
                 <div class="modal-field">
                 <label class="modal-label" for="user-email">Почта</label>
                     <input type="email" class="modal-input" name="user-email" 
-                    placeholder="Введите почту"
+                    
                      required 
                      id="user-email"/>
                     </div>
