--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                         </div>
                     <div class="checkbox">
                     <label class="modal-license" for="checkbox">Соглашаюсь с рассылкой и принимаю
-                        <a href="" class="checkbox-license link"> Условия договора</a></label>
+                        <a href="" class="checkbox-license"> Условия договора</a></label>
                    <input type="checkbox"name="lisens"id="checkbox" class="checkbox"/>
                    <span class="icon-check"></span> 
                 </div>
