--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                         <li class="galery-item">
                             <div class="top-wrap">
                                 <a href="" class="galery-link"></a>
-                                <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                                <img src="./images/neworlean.jpg" alt="" class="img" width="370">
                                 <p class="top-text">Ресурс предлагает комплексные предложения
                                     с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
@@ -88,7 +88,7 @@
                         <li class="galery-item">
                             <div class="top-wrap">
                                 <a href="" class="galery-link"></a>
-                                <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                                <img src="./images/img.jpg" alt="" class="img" width="370">
                                 <p class="top-text">Ресурс предлагает комплексные предложения
                                     с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
@@ -101,7 +101,7 @@
                         <li class="galery-item">
                             <div class="top-wrap">
                                 <a href="" class="galery-link"></a>
-                                <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                                <img src="./images/prime.jpg" alt="" class="img" width="370">
                                 <p class="top-text">Ресурс предлагает комплексные предложения
                                     с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
@@ -114,7 +114,7 @@
                         <li class="galery-item">
                             <div class="top-wrap">
                                 <a href="" class="galery-link"></a>
-                                <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                                <img src="./images/box.jpg" alt="" class="img" width="370">
                                 <p class="top-text">Ресурс предлагает комплексные предложения
                                     с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
@@ -127,7 +127,7 @@
                         <li class="galery-item">
                             <div class="top-wrap">
                                 <a href="" class="galery-link"></a>
-                                <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                                <img src="./images/borders.jpg" alt="" class="img" width="370">
                                 <p class="top-text">Ресурс предлагает комплексные предложения
                                     с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
@@ -140,7 +140,7 @@
                         <li class="galery-item">
                             <div class="top-wrap">
                                 <a href="" class="galery-link"></a>
-                                <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                                <img src="./images/edition.jpg" alt="" class="img" width="370">
                                 <p class="top-text">Ресурс предлагает комплексные предложения
                                     с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
@@ -153,7 +153,7 @@
                         <li class="galery-item">
                         <div class="top-wrap">
                             <a href="" class="galery-link"></a>
-                            <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                            <img src="./images/lab.jpg" alt="" class="img" width="370">
                             <p class="top-text">Ресурс предлагает комплексные предложения
                                 с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
@@ -166,7 +166,7 @@
                         <li class="galery-item">
                         <div class="top-wrap">
                             <a href="" class="galery-link"></a>
-                            <img src="./images/technokriak.jpg" alt="" class="img" width="370">
+                            <img src="./images/business.jpg" alt="" class="img" width="370">
                             <p class="top-text">Ресурс предлагает комплексные предложения
                                 с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                 исчерпывающие сведения о компании или частном лице.</p>
