--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                      required id="add-email"/>
             <label class="footer-label" for="add-email"></label>
             
-            <button type="button" class="add-btn">Подписаться
+            <button type="submit" class="add-btn">Подписаться
                 <svg class="add-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                 </svg>
