--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                </ul>
         </div>
             <div class="footer-field">
-                <div class="container">
+                
                     <section class="online">
             <h2 class="title online-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
             
@@ -417,7 +417,7 @@
             <input type="text"
              class="modal-input"
               name="user-name" 
-              required 
+              required  placeholder=" "
               minlength="2"
               id="user-name">
             <svg class="form-icon" width="12" height="12">
@@ -430,7 +430,7 @@
             <div class="modal-input-wrap">
             <input type="tel" class="modal-input" name="user-tel" 
                  id="user-tel" 
-                     required/>
+                     required placeholder=" "/>
                     <svg class="form-icon" width="13" height="13">
                         <use href="./images/symbol-defs.svg#icon-phone-black"></use>
                     </svg>
@@ -440,7 +440,7 @@
                 <label class="modal-label" for="user-email">Почта</label>
                 <div class="modal-input-wrap">
                     <input type="email" class="modal-input" name="user-email" 
-                    required 
+                    required  placeholder=" "
                      id="user-email"/>
                     <svg class="form-icon" width="15" height="12">
                         <use href="./images/symbol-defs.svg#icon-email-black"></use>
