--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <input type="tel" class="modal-input" name="user-tel" 
                  id="user-tel" 
                      required placeholder=" "/>
-                    <svg class="form-icon" width="13" height="12">
+                    <svg class="form-icon" width="13" height="13">
                         <use href="./images/symbol-defs.svg#icon-phone-black"></use>
                     </svg>
                 </div>
@@ -448,7 +448,7 @@
                     </div>
                     </div>
                     <div class="modal-field">
-                    <label class="modal-coment" for="user-text">Коментарий</label>
+                    <label class="modal-label" for="user-text">Коментарий</label>
                         <textarea name="user-text" id="user-text" class="modal-text" 
                         placeholder="Введите текст"></textarea>
                         </div>
